<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="1"
        android:title="@string/ok"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/send"
        android:orderInCategory="2"
        android:title="@string/send"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete"
        android:orderInCategory="3"
        android:title="@string/delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/sendToDesktop"
        android:orderInCategory="4"
        android:title="@string/send_to_desktop"
        app:showAsAction="never" />


</menu>