<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_small"
    app:cardBackgroundColor="@color/grey_700"
    app:cardCornerRadius="@dimen/radius_medium"
    app:cardElevation="5dp"
    app:cardMaxElevation="7dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/padding_big">

    <LinearLayout
        android:id="@+id/linCreatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvWriteEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/write_your_email" />

        <TextView
            android:id="@+id/tvExplanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/explanation"
            android:textSize="@dimen/print_very_small"
            android:labelFor="@id/etWriteEmail"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp">

            <EditText
                android:id="@+id/etWriteEmail"
                android:inputType="textEmailAddress"
                android:labelFor="@id/tvWriteEmail"
                android:autofillHints="email"
                style="@style/EditTextPasswordStyle"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvCreatedPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/create_password" />

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp">

            <EditText
                android:id="@+id/etCreatedPassword"
                android:autofillHints="password"
                android:inputType="textVisiblePassword"
                style="@style/EditTextPasswordStyle"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bCancel"
                style="@style/BottomDialogStyle"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/bSavePassword"
                style="@style/BottomDialogStyle"
                android:layout_weight="1"
                android:text="@string/save_data" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="center"
            android:text=""
            android:textColor="@color/red" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvEntry"
            android:layout_width="200dp"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_small"
                android:autofillHints=""
                android:drawablePadding="@dimen/padding_small"
                android:inputType="textPassword"
                android:padding="@dimen/padding_big" />

            <ImageButton
                android:id="@+id/ibSee"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/toggle_visibility_password"
                app:srcCompat="@drawable/ic_visibility_on" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/bEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enter" />

        <Button
            android:id="@+id/bRestorePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:text="@string/restore_password" />

        <TextView
            android:id="@+id/tvWarningEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textColor="@color/red" />
    </LinearLayout>
</androidx.cardview.widget.CardView>

